kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postcard-server
spec:
  type: NodePort
  selector:
    app: postcard-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
