kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: autofocus
    networking.gke.io/managed-certificates: autofocus-certificate
spec:
  rules:
  - host: jmkac.happyhourofcode.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: postcard-server
          servicePort: 80
